--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -629,5 +629,6 @@ source "drivers/misc/carma/Kconfig"
 source "drivers/misc/altera-stapl/Kconfig"
 source "drivers/misc/mei/Kconfig"
 source "drivers/misc/vmw_vmci/Kconfig"
+source "drivers/misc/stm401/Kconfig"
 source "drivers/misc/qcom/Kconfig"
 endmenu
