--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -63,4 +63,5 @@ obj-$(CONFIG_TI_DRV2667) += ti_drv2667.o
 obj-$(CONFIG_QPNP_MISC) += qpnp-misc.o
 obj-$(CONFIG_APQ8084_DOCKING_STATION)	+= apq8084_dock.o
 obj-$(CONFIG_MOT_UTAG) += utag/
+obj-$(CONFIG_SENSORS_STM401) += stm401/
 obj-y				+= qcom/
